# model/mAuth/auth_tables.go
@@ -204,6 +204,11 @@ var TarantoolTables = map[Tt.TableName]*Tt.TableProp{
 			{Level, Tt.Double},
 			{ParentId, Tt.Unsigned},
 			{Children, Tt.Array},
+			{CreatedAt, Tt.Integer},
+			{CreatedBy, Tt.Unsigned},
+			{UpdatedAt, Tt.Integer},
+			{UpdatedBy, Tt.Unsigned},
+			{DeletedAt, Tt.Integer},
 		},
 		AutoIncrementId: true,
 	},
